welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: class List is abstract; cannot be instantiated
	var T=new List[Int](num+1)
              ^