welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var T=new List[Int](num+1)
	T(1)=1
	var resultat = 1
	var cour = 2
	var prec = 1
	var glb = T(resultat)
	
	do {
		if (cour-prec == glb) {
			prec = cour
			resultat += 1
			T(cour) = resultat
			glb = T(resultat)
		}
		T(cour)=resultat
		cour += 1
		
	} while (cour != num+1)
	return T
}
